2009-01-11  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=16001
        Incorrect assumption that selection is always contiguous LTR.

        Test: editing/selection/extend-selection-bidi.html

        * rendering/RootInlineBox.cpp: (WebCore::RootInlineBox::fillLineSelectionGap):
        Make this function  not assume a contiguous visual LTR selection range. 

2009-01-11  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23207
        Moved currentTime() to from WebCore to WTF.

        Most of these files only have a different header file included.
        Various build files reflect removal of SystemTimeGtk, Wx, Qt and Linux
        which were removed since they only implemented currentTime().

        * ForwardingHeaders/wtf/CurrentTime.h: Added.
        * GNUmakefile.am:
        * WebCore.base.exp:
        * WebCore.pro:
        * dom/ContainerNode.cpp:
        * dom/Document.cpp:
        * dom/Event.cpp:
        * history/CachedPage.cpp:
        * history/PageCache.cpp:
        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::load):
        (WebCore::HTMLMediaElement::progressEventTimerFired):
        * html/HTMLTokenizer.cpp:
        * html/PreloadScanner.cpp:
        * inspector/InspectorController.cpp:
        * loader/Cache.cpp:
        (WebCore::Cache::pruneLiveResources):
        * loader/CachedImage.cpp:
        * loader/CachedResource.cpp:
        * loader/FrameLoader.cpp:
        * loader/ProgressTracker.cpp:
        * loader/icon/IconDatabase.cpp:
        * loader/icon/IconRecord.cpp:
        * page/DragController.cpp:
        * page/Frame.cpp:
        * page/FrameView.cpp:
        * page/animation/AnimationBase.cpp:
        * page/animation/AnimationController.cpp:
        * page/animation/KeyframeAnimation.cpp:
        * platform/SystemTime.h:
        * platform/Timer.cpp: