@@ -1,3 +1,13 @@
+2008-12-18  Bernhard Rosenkraenzer <bero@arklinux.ch>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22205
+        Fix compatibility with bison 2.4, partially based on older patch by
+        Priit Laes <amd@store20.com>
+
+        * WebCore/css/CSSGrammar.y: Made compatible with bison 2.4
+
 2009-01-11  Jeremy Moskovich  <jeremy@chromium.org>
 
         Reviewed by Darin Adler.
